--- a/posts/ClassifyingPalmerPenguins/index.ipynb
+++ b/posts/ClassifyingPalmerPenguins/index.ipynb
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Palmer Penguins dataset is a public dataset frequently used within the educational data science community. It contains observations of 3 Antarctic penguin species, collected by Dr. Kristen Gorman and the Long Term Ecological Research Network.\n",
+    "The Palmer Penguins dataset is a public dataset frequently used within the educational data science community. It contains Dr. Kristen Gorman and the Long Term Ecological Research Network's observations of hundreds of antartic penguins belonging to 3 species groups: Adelie, Gentoo, and Chinstrap.\n",
     "\n",
     "This blog aims to accomplish three goals: \n",
     "\n",
@@ -905,7 +905,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![citation: https://www.dreamstime.com/stock-illustration-d-penguin-teaches-math-render-numbers-image45736629](penguin_with_numbers.jpg)"
+    "![citation: https://www.dreamstime.com/stock-illustration-d-penguin-teaches-math-render-numbers-image45736629](penguin_with_numbers.jpg){width=50%}"
    ]
   },
   {
