--- a/posts/LimitsToQuantitativeApproach/refs.bib
+++ b/posts/LimitsToQuantitativeApproach/refs.bib
@@ -41,3 +41,14 @@
   howpublished={Speech}
 }
 
+@article{kordzadeh2022algorithmic,
+  title={Algorithmic bias: review, synthesis, and future research directions},
+  author={Kordzadeh, Nima and Ghasemaghaei, Maryam},
+  journal={European Journal of Information Systems},
+  volume={31},
+  number={3},
+  pages={388--409},
+  year={2022},
+  publisher={Taylor \& Francis}
+}
+
