--- a/posts/Perceptron/index.ipynb
+++ b/posts/Perceptron/index.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -243,30 +243,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "visualization code modified from [Prof Phil's Notes](https://www.philchodrow.prof/ml-notes/chapters/20-perceptron.html#fig-demonstration)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Experiment 2: Not Linearly Separable"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 158,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def create_not_separable(n_points = 96, noise = 0.7, p_dims = 2):\n",
-    "    \n",
-    "    y = torch.arange(n_points) >= int(n_points/2)\n",
-    "    X = y[:, None] + torch.normal(0.0, noise, size = (n_points,p_dims))\n",
-    "    X = torch.cat((X, torch.ones((X.shape[0], 1))), 1)\n",
-    "\n",
-    "    # convert y from {0, 1} to {-1, 1}\n",
-    "    y = 2*y - 1\n",
-    "\n",
-    "    return X, y"
+    "Let's generate some data that isn't linearly separable by increasing the noise of our original data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -287,8 +283,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's run the perceptron algorithm"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -345,8 +348,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Even with 1,000 perceptron updates, the algorithm does not terminate because the loss will never reach 0!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What dividing line does the perceptron algorithm produce, 1,000 updates later?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -367,8 +384,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hmm, this isn't even a very good separator. Obviously, the perceptron algorithm performs poorly on data that isn't perfect linearly separable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Experiment 3: Multi-Dimensional Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The perceptron algorithm should work on data that is more than 2-dimensional."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, geneate some five-dimensional data to experiment with."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,8 +428,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, run the perceptron algorithm."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -436,6 +488,13 @@
     "plt.plot(loss_vec, color = \"slategrey\")\n",
     "plt.scatter(torch.arange(len(loss_vec)), loss_vec, color = \"slategrey\")\n",
     "labs = plt.gca().set(xlabel = \"Perceptron Iteration (Updates Only)\", ylabel = \"loss\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Even after 3,000 iterations, the loss stays fairly high -- around 0.3. This leads me to believe that the data I created isn't linearly separable."
    ]
   }
  ],
