--- a/posts/Perceptron/index.ipynb
+++ b/posts/Perceptron/index.ipynb
@@ -9,14 +9,44 @@
     "author: Liz Rightmire\n",
     "date: '2024-03-27'\n",
     "image: \"image.jpg\"\n",
-    "description: \"---\"\n",
+    "description: \"Implementing and Testing the Perceptron Algorithm\"\n",
     "format: html\n",
     "---"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Implementing the Perceptron Algorithm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Perceptron.py](https://github.com/leftmire/lizrightmireio.github.io/blob/main/posts/Perceptron/perceptron.py)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Abstract"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This blog is a deep dive into the perceptron algorithm -- a supervised binary classification algorithm created in 1957. This algorithm begins with a randomly generated weight vector, and then updates the weight vectors using a random data point and a score generated from the point and the current weight vector. When the loss function quantifying the discrepency between predicted values and actual values of a model is 0, the algorithm terminates and the resulting weight vector describes the decision boundary between the classes.\n",
+    "\n",
+    "I begin by describing my implementation of a perceptron algorith, and then  investigate the algorithm's effectiveness on three types of datasets: linearly separable, not linearly separable, and multi-dimensional. As expected, the algorithm is able to find the decision boundary between linearly separable classes, yet fails with not linearly separable classes. Finally, the five0dimensional data I generate does not appear to be  separable via a perceptron algorithm."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -29,25 +59,58 @@
     }
    ],
    "source": [
+    "import torch\n",
+    "import numpy as np\n",
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "# load contents of perceptron.py\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "from perceptron import Perceptron, PerceptronOptimizer"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import torch\n",
-    "import numpy as np\n",
-    "from matplotlib import pyplot as plt"
+    "### Perceptron Implementation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can find my implementation of the perceptron algorithm at [Perceptron.py](https://github.com/leftmire/lizrightmireio.github.io/blob/main/posts/Perceptron/perceptron.py). \n",
+    "\n",
+    "Perceptron.grad first computes the score for each data point in the feature matrix. The score is the feature matrix X matrix multiplied by the weight vector.\n",
+    "\n",
+    "If the score is a different sign from the actual class label, the update is computed. Else, zeros are returned -- this entry in the weight vector doesn't need to be updated."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Experiment 1: Linearly Separable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When given linearly separable data, the perceptron algorithm should converge to a weight vector that describes a line separating the two classes of data. Let's check that this is true for our implementation of the perceptron algorithm."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, generate linearly separable data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -95,8 +158,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "code modified from [Prof Phil's Notes](https://www.philchodrow.prof/ml-notes/chapters/20-perceptron.html#fig-demonstration)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is easy to imagine a decision boundary that would divide these two classes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's run the perceptron algorithm. After just 3 iterations, the loss is 0 and a dividing line is discovered."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -152,12 +236,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Experiment 1: Linearly Separable"
+    "How did this happen? Using a simple loop, the answer to this question can be visualized on side-by-side plots. The circled point is the one randomly chosen for the perceptron update, and the line updates from the dotted line to the solid line."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +316,7 @@
     "        ax.set_title(f\"loss = {loss:.3f}\")\n",
     "        ax.set(xlim = (-1, 2), ylim = (-1, 2))\n",
     "\n",
-    "        if(current_ax < 4):\n",
+    "        if(current_ax < 3):\n",
     "            current_ax += 1\n",
     "        else:\n",
     "            break\n",
@@ -262,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +578,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Even after 3,000 iterations, the loss stays fairly high -- around 0.3. This leads me to believe that the data I created isn't linearly separable."
+    "Even after 3,000 iterations, the loss stays fairly high -- around 0.3. The loss does not appear to be consistently decreasing with each update. This leads me to believe that the data I created isn't linearly separable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The update in each iteration of the perceptron algorithm is computed as X*y, the elemnt-wise product between a single row of matrix X and target vector y. This is a (1xp) * (n*1) where n is the number of data points and p is the number of features. This process is O(np). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I was able to prove that the perceptron algorithm, though simple, is both effective and efficient at finding a linear classifier for data of any dimension. I gained a deeper understanding of the inner workings of this algorithm, which will translate well when I study more complicated machine learning algorithms. "
    ]
   }
  ],
