--- a/posts/Perceptron/index.ipynb
+++ b/posts/Perceptron/index.ipynb
@@ -39,9 +39,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This blog is a deep dive into the perceptron algorithm -- a supervised binary classification algorithm created in 1957. This algorithm begins with a randomly generated weight vector, and then updates the weight vectors using a random data point and a score generated from the point and the current weight vector. When the loss function quantifying the discrepency between predicted values and actual values of a model is 0, the algorithm terminates and the resulting weight vector describes the decision boundary between the classes.\n",
+    "This blog is a deep dive into the perceptron algorithm -- a supervised binary classification algorithm created in 1957. This algorithm begins with a randomly generated weight vector, and then updates the weight vectors using a random data point and a score generated from the point and the current weight vector. When the loss function quantifying the discrepency between predicted values of the data and actual values is 0, the algorithm terminates and the resulting weight vector describes the decision boundary between the classes.\n",
     "\n",
-    "I begin by describing my implementation of a perceptron algorith, and then  investigate the algorithm's effectiveness on three types of datasets: linearly separable, not linearly separable, and multi-dimensional. As expected, the algorithm is able to find the decision boundary between linearly separable classes, yet fails with not linearly separable classes. Finally, the five0dimensional data I generate does not appear to be  separable via a perceptron algorithm."
+    "I begin by describing my implementation of a perceptron algorithm, and then  investigate the algorithm's effectiveness on three types of datasets: linearly separable, not linearly separable, and multi-dimensional. As expected, the algorithm is able to find the decision boundary between linearly separable classes, yet fails with not linearly separable classes. Finally, the five dimensional data I generate does not appear to be  separable via a perceptron algorithm."
    ]
   },
   {
@@ -592,14 +592,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The update in each iteration of the perceptron algorithm is computed as X*y, the elemnt-wise product between a single row of matrix X and target vector y. This is a (1xp) * (n*1) where n is the number of data points and p is the number of features. This process is O(np). "
+    "The update in each iteration of the perceptron algorithm is computed as X \\* w, the product between a single row of matrix X and the weight vector w. Each row in X has p entries for the p features, so this process is O(p). "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I was able to prove that the perceptron algorithm, though simple, is both effective and efficient at finding a linear classifier for data of any dimension. I gained a deeper understanding of the inner workings of this algorithm, which will translate well when I study more complicated machine learning algorithms. "
+    "I was able to prove that the perceptron algorithm, though simple, is both effective and efficient at finding a linear classifier for data of any dimension. I wrote my first implementation of an algorithm and gained a deeper understanding of its inner workings. This knowledge will translate well when I study more complicated machine learning algorithms. "
    ]
   }
  ],
