--- a/posts/LogisticRegression/index.ipynb
+++ b/posts/LogisticRegression/index.ipynb
@@ -273,7 +273,7 @@
     "\n",
     "$\\mathbf{w}_{k+1} \\gets \\mathbf{w}_k - \\alpha \\nabla L(\\mathbf{w}_k) + \\beta(\\mathbf{w}_k - \\mathbf{w}_{k-1}) $\n",
     "\n",
-    "Now that $\\beta$ is not 0, The final term, or momentum term, is factored into the step calculation. If there is a large difference between the current weights and the weights of the previous iteration, the step will be larger.\n",
+    "Now that $\\beta$ is not 0, The final term, or momentum term, is factored into the step calculation. The size of the difference between the current weights and previous iteration's weights have an impact on the size of the step.\n",
     "\n",
     "Let's prove this to ourselves."
    ]
@@ -452,11 +452,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Discussion Paragraph:\n",
-    "- remind reader what you did\n",
-    "- what did you learn while doing it? \n",
+    "In this blog post, I set out to perform a deeper dive into a stalwart in the machine larning world: logistic regression. Instead of relying on sklearn's implementation as I have done in the past, I built my own logistic regression model and tested it in a variety of scenarios. The intricacies of the gradient and loss equations became more concrete as I toyed with tensors to produce the desired result. \n",
     "\n",
-    "In this blog post, I set out to perform a deeper dive into "
+    "Beginning with vanilla gradient descent, I observed how the loss fell to zero and the decision bounary was stored in weights. Then, I dove into the theory behind momentum (how and why does it work?) and set $\\beta$ to 0.9 such that the momentum term of the step function would be at play. Finally, I saw how logistic regression can overfit -- something I'll be wary of in future projects. "
    ]
   }
  ],
