corrections -- Palmer Penguins

--- a/posts/ClassifyingPalmerPenguins/index.ipynb
+++ b/posts/ClassifyingPalmerPenguins/index.ipynb
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Palmer Penguins dataset is a public dataset frequently used within the educational data science community. It contains Dr. Kristen Gorman and the Long Term Ecological Research Network's observations of hundreds of antartic penguins belonging to 3 species groups: Adelie, Gentoo, and Chinstrap.\n",
+    "The Palmer Penguins dataset is a public dataset frequently used within the educational data science community. It contains Dr. Kristen Gorman and the Long Term Ecological Research Network's observations of hundreds of Antartic penguins belonging to 3 species groups: Adelie, Gentoo, and Chinstrap.\n",
     "\n",
     "This blog aims to accomplish three goals: \n",
     "\n",
@@ -240,6 +240,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
+    "# import dataset\n",
     "train_url = \"https://raw.githubusercontent.com/PhilChodrow/ml-notes/main/data/palmer-penguins/train.csv\"\n",
     "train = pd.read_csv(train_url)\n",
     "train[\"Species\"] = train[\"Species\"].str.split().str.get(0)\n",
@@ -551,15 +552,31 @@
    ],
    "source": [
     "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "# Initialize label encoder\n",
     "le = LabelEncoder()\n",
     "le.fit(train[\"Species\"])\n",
     "\n",
+    "\n",
     "def prepare_data(df):\n",
+    "  '''Prepare data for model development'''\n",
+    "\n",
+    "  # drop extraneous columns\n",
     "  df = df.drop([\"studyName\", \"Sample Number\", \"Individual ID\", \"Date Egg\", \"Comments\", \"Region\"], axis = 1)\n",
+    " \n",
+    "  # drop rows with empty \"Sex\" column\n",
     "  df = df[df[\"Sex\"] != \".\"]\n",
+    "  \n",
+    "  # drop rows with NA values\n",
     "  df = df.dropna()\n",
+    "\n",
+    "  # label encode Species column\n",
     "  y = le.transform(df[\"Species\"])\n",
+    "\n",
+    "  # remove Species column for training set\n",
     "  df = df.drop([\"Species\"], axis = 1)\n",
+    "\n",
+    "  # convert categorical variables into indicator variables\n",
     "  df = pd.get_dummies(df)\n",
     "  return df, y\n",
     "\n",
@@ -848,49 +865,59 @@
     "import numpy as np\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
+    "# adjust default df column width so that all 3 features appear\n",
     "pd.set_option('max_colwidth', 10000)\n",
     "\n",
+    "# differentiate qualitative and quantitative columns\n",
     "all_qual_cols = [\"Clutch Completion\", \"Sex\", \"Island\", 'Stage_Adult, 1 Egg Stage']\n",
     "all_quant_cols = ['Culmen Length (mm)', 'Culmen Depth (mm)', 'Flipper Length (mm)', 'Body Mass (g)', 'Delta 15 N (o/oo)', 'Delta 13 C (o/oo)' ]\n",
     "\n",
+    "# initialize accuracy score df\n",
     "columns = ['features', 'model', 'score']\n",
-    "\n",
     "score_df = pd.DataFrame(columns = columns)\n",
     "\n",
     "for qual in all_qual_cols: \n",
+    "  # choose a qualitative column\n",
     "  qual_cols = [col for col in X_train.columns if qual in col ]\n",
+    "\n",
+    "  # choose 2 quantitative columns\n",
     "  for pair in combinations(all_quant_cols, 2):\n",
     "    cols = qual_cols + list(pair)\n",
     "\n",
-    "    # Logistic Regression\n",
+    "    ### Logistic Regression\n",
     "    LR = LogisticRegression(max_iter = 20000000000)\n",
     "    LR.fit(X_train[cols], y_train)  \n",
     "    LRscore = cross_val_score(LR, X_train[cols], y_train, cv = 5).mean()\n",
     "    score_df.loc[len(score_df.index)] = [cols, 'Logistic', LRscore]  \n",
     "\n",
-    "    # Decision Tree\n",
+    "    ### Decision Tree\n",
     "    DTC = DecisionTreeClassifier()\n",
+    "    # perform grid search to find optimal max depth\n",
     "    param_grid = {'max_depth': [11,2,3,4,5,6,7,8,9,10, None]}\n",
+    "    # grid search with cross-validation \n",
     "    grid_search = GridSearchCV(DTC, param_grid, cv = 5)\n",
     "    grid_search.fit(X_train[cols], y_train)\n",
     "    DTCscore = grid_search.best_score_\n",
     "    score_df.loc[len(score_df.index)] = [cols, 'Decision Tree', DTCscore]  \n",
     "\n",
-    "    # Random Forest\n",
+    "    ### Random Forest\n",
     "    randomforest = RandomForestClassifier()\n",
+    "    # cross validation for optimal max depth, with cross-validation\n",
     "    grid_search = GridSearchCV(randomforest, param_grid, cv = 5)\n",
     "    grid_search.fit(X_train[cols], y_train)\n",
     "    RF_score = grid_search.best_score_\n",
     "    score_df.loc[len(score_df.index)] = [cols, 'Random Forest', RF_score]\n",
     "\n",
-    "    # SVM\n",
+    "    ### SVM\n",
     "    param_grid = {'gamma': 10.0**np.arange(-5, 5)}\n",
     "    SVC_model = SVC()\n",
+    "    # perform grid search for optimal gamma value, with cross-validation\n",
     "    grid_search = GridSearchCV(SVC_model, param_grid, cv = 5)\n",
     "    grid_search.fit(X_train[cols], y_train)\n",
     "    SVMscore = grid_search.best_score_\n",
     "    score_df.loc[len(score_df.index)] = [cols, \"SVM\", SVMscore]\n",
     "\n",
+    "# print out results df, sorted by accuracy \"score\"\n",
     "score_df.sort_values(by='score', ascending=False).head(10)\n"
    ]
   },
@@ -1045,7 +1072,6 @@
     "      p = model.predict(XY)\n",
     "      p = p.reshape(xx.shape)\n",
     "      \n",
-    "      \n",
     "      # use contour plot to visualize the predictions\n",
     "      axarr[i].contourf(xx, yy, p, cmap = \"jet\", alpha = 0.2, vmin = 0, vmax = 2)\n",
     "      \n",
@@ -1160,13 +1186,13 @@
    "source": [
     "from sklearn.metrics import confusion_matrix\n",
     "\n",
-    "#actual\n",
-    "#predicted\n",
+    "# guesses for each data\n",
+    "y_test_pred = LR.predict(X_test[optimal_features]) \n",
     "\n",
-    "y_test_pred = LR.predict(X_test[optimal_features]) # guesses for each data\n",
-    "\n",
+    "# confusion matrix\n",
     "cm = confusion_matrix(y_test, y_test_pred)\n",
     "\n",
+    "# print confusion matrix results\n",
     "for i in range(3):\n",
     "    for j in range(3):\n",
     "        print(f\"There were {cm[i,j]} {le.classes_[i]} penguin(s) who were classified as {le.classes_[j]}.\")"
@@ -1215,6 +1241,24 @@
     "display_labels = [\"Adelie\", \"Chinstrap\", \"Gentoo\"]\n",
     "ConfusionMatrixDisplay(cm, display_labels = display_labels).plot(\n",
     "    include_values=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Discussion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this blog post, I aimed to explore the popular Palmer Penguins dataset and build a classification model that could correctly determine the species of every penguin in unseen data. In accomplishing these goals, I created two new visualizations and summary table, developing skills using pandas functions and matplotlib. I also practiced selecting features for a model by testing feature combinations on 4 model types -- logistic regression, decision tree, random forest, and SVM. I optimized each model using cross validation and grid search for optimal hyperparameters, and evaluated each model based on accuracy.\n",
+    "\n",
+    "Once I had settled on the best features and best model type, I evaluated my model on unseen testing data and achieved the desired result -- 100% classification accuracy! I created and interperated a confusion matrix, which corroborated my high accuracy result. \n",
+    "\n",
+    "The skills I learned in this blog post will surely serve me well as I move into understanding and developing more complex models. "
    ]
   }
  ],
