--- a/posts/Perceptron/index.ipynb
+++ b/posts/Perceptron/index.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "[Perceptron.py](https://github.com/leftmire/lizrightmireio.github.io/blob/main/posts/Perceptron/perceptron.py)\n",
     "\n",
-    "[PerceptronMini,py]"
+    "[PerceptronMini.py](https://github.com/leftmire/lizrightmireio.github.io/blob/main/posts/Perceptron/perceptron_mini.py)"
    ]
   },
   {
@@ -846,14 +846,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The update in each iteration of the perceptron algorithm is computed as X \\* w, the product between a single row of matrix X and the weight vector w. Each row in X has p entries for the p features, so this process is O(p). "
+    "The update in each iteration of the perceptron algorithm is computed as X \\* w, the product between a single row of matrix X and the weight vector w. Each row in X has p entries for the p features, so this process is O(p). \n",
+    "\n",
+    "The mini-batch perceptron algorithm takes the dot product between each data point in the batch, so the runtime is O(kp) for each iteration."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I was able to prove that the perceptron algorithm, though simple, is both effective and efficient at finding a linear classifier for data of any dimension. I wrote my first implementation of an algorithm and gained a deeper understanding of its inner workings. This knowledge will translate well when I study more complicated machine learning algorithms. "
+    "I was able to prove that the perceptron algorithm, though simple, is both effective and efficient at finding a linear classifier for data of any dimension. I wrote my first implementation of an algorithm and gained a deeper understanding of its inner workings. I then took my understanding further and implemented the more efficient mini-batch perceptron with improved convergence.\n",
+    "\n",
+    "This knowledge will translate well when I study more complicated machine learning algorithms. "
    ]
   }
  ],
