final blog post

--- a/posts/FinalReflection/index.ipynb
+++ b/posts/FinalReflection/index.ipynb
@@ -8,6 +8,7 @@
     "title: \"End-Of-Course Reflection\"\n",
     "type: \"Reflection\"\n",
     "date: 2024-05-15\n",
+    "image: \"image.jpg\"\n",
     "description: |\n",
     "    We reflect on our learning, engagement, and achievement over the course of the semester. \n",
     "objectives: \n",
