--- a/posts/CancerFinalProject/index.ipynb
+++ b/posts/CancerFinalProject/index.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: Final Project Blog Post\n",
+    "title: Final Project\n",
     "author: Liz Rightmire\n",
     "date: '2024-05-16'\n",
     "image: \"image.jpg\"\n",
